<resources>
    <string name="app_name">Nama</string>
    <string name="app_email">Email</string>
    <string name="app_login">Login</string>
    <string name="app_username">Username</string>
    <string name="app_pass">password</string>
    <string name="app_regis">Register</string>
    <string name="app_namefull">Full Name</string>
    <string name="app_conrmPass">Confirm Password</string>


</resources>